[gd_scene load_steps=4 format=3 uid="uid://lqyku5wn2wo0"]

[ext_resource type="Script" uid="uid://c15jbli6trqo3" path="res://Player/MovementController.gd" id="1_ktghv"]
[ext_resource type="Script" uid="uid://csnumht4cqjo3" path="res://Player/player_sound_manager.gd" id="2_xbp8y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fn1rj"]

[node name="MovementController" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
floor_block_on_wall = false
floor_snap_length = 0.5
script = ExtResource("1_ktghv")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_fn1rj")

[node name="SoundManager" type="Node3D" parent="."]
script = ExtResource("2_xbp8y")

[node name="JumpPlayer" type="AudioStreamPlayer3D" parent="SoundManager"]
attenuation_model = 1
max_distance = 30.0

[node name="LandPlayer" type="AudioStreamPlayer3D" parent="SoundManager"]
attenuation_model = 1
max_distance = 30.0

[node name="DashPlayer" type="AudioStreamPlayer3D" parent="SoundManager"]
attenuation_model = 1
max_distance = 30.0

[node name="SlidePlayer" type="AudioStreamPlayer3D" parent="SoundManager"]
attenuation_model = 1
max_distance = 30.0

[node name="GrappleShootPlayer" type="AudioStreamPlayer3D" parent="SoundManager"]
attenuation_model = 1
max_distance = 30.0

[node name="GrapplePullPlayer" type="AudioStreamPlayer3D" parent="SoundManager"]
attenuation_model = 1
max_distance = 30.0
